[EFL][WK1] URL printing code in DumpRenderTree doesn't match WTR or Mac DRT https://bugs.webkit.org/show_bug.cgi?id=119585

Reviewed by Gyuyoung Kim.

Source/WebKit/efl:

* WebCoreSupport/DumpRenderTreeSupportEfl.cpp:
(DumpRenderTreeSupportEfl::provisionalURL):
Implemented to pass provisionalURL of main frame to DumpRenderTreeChrome.
* WebCoreSupport/DumpRenderTreeSupportEfl.h:

Tools:

* DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
(pathSuitableForTestResult):
Return path string that's relative to main frame URL, or just file name if
the resource is not in the same directory subtree.
Referenced WebKitTestRunner code in r153852.
(descriptionSuitableForTestResult):
(DumpRenderTreeChrome::onFrameRedirectRequested):
(DumpRenderTreeChrome::onNewResourceRequest): Followed changes of r153903.


Canonical link: https://commits.webkit.org/137666@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153977 268f45cc-cd09-0410-ab3c-d52691b4dbfc